# aii4.0-pipeline-defect-detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bentofile.yaml  data.dvc  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
docker/: Dockerfile
requirements/: requirements-api.txt  requirements-demo.txt  requirements-dev-cuda.txt  requirements-dev.txt
src/: demo.py  evaluate.py  export.py  main.py  prepare.py  service.py  train.py  train_cross_val.py
src/data_modules/: defect_data_module.py  kfold_defect_data_module.py
src/datasets/: defect_dataset.py
src/losses/: focal_loss.py
src/models/: __init__.py  cnn_defect_detector.py  resnet50_defect_detector.py
src/utils/: callbacks.py  image.py  preprocessing.py  seed.py
